tests/paczka1/fuzzy1/72975517.err
Error in line 1: tV1 S888 39,1
Error in line 17: tV1 A357 42,2
Error in line 33: Jcrkd A357 31,3
